ajout de la description de moi

--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,12 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+		<div>
+			<p>
+				je m'appelle Pascal AKA Lascap
+			</p>
+		</div>
 		
 	</body>
 </html>
