--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,8 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
-		<div>
-			<p>
+		<div color:#ff000>
+			<p >
 				je m'appelle Pascal AKA Lascap
 			</p>
 		</div>
