--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,8 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
-		<div color:#ff000>
-			<p >
+		<div>
+			<p <p style="color:#1361aa">
 				je m'appelle Pascal AKA Lascap
 			</p>
 		</div>
