--- a/hello.html
+++ b/hello.html
@@ -17,9 +17,23 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+		<!-- Description -->
 		<div>
+			<h1>
+				MOI
+			</h1>
 			<p <p style="color:#1361aa">
 				je m'appelle Pascal AKA Lascap
+			</p>
+		</div>
+
+		<!-- Récompenses -->
+		<div>
+			<h1>
+				Mes récompenses
+			</h1>
+			<p>
+				En construction!
 			</p>
 		</div>
 		
